testdata/typechecker/error/multidim/ArrayAcc.java
int main() {
    int[][] a;
    a = new int[1][a];
    return 0;
}